Fixed overflow in swipeable views so each view is incharge of scrollbar

--- a/src/scss/components/_swipeable-views.scss
+++ b/src/scss/components/_swipeable-views.scss
@@ -1,5 +1,5 @@
 .md-swipeable-view {
-  overflow-x: hidden;
+  overflow: hidden;
   position: relative;
   white-space: nowrap;
 }
@@ -7,6 +7,7 @@
 .md-swipeable-item {
   display: inline-block;
   min-width: 100%;
+  overflow-y: auto;
   padding-left: 1em;
   padding-right: 1em;
   transition-property: transform;
